force-app/main/default/objects/Hydrafacial_S__c/Hydrafacial_S__c.object-meta.xml
<CustomObject>
    <label>Hydrafacial(S)</label>
    <nameField>
        <label>Hydrafacial(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hydrafacial(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>