force-app/main/default/objects/Hydrafacial_S__c/fields/Hydrafacial__c.field-meta.xml
<CustomField>
    <fullName>Hydrafacial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hydrafacial</label>
    <referenceTo>Hydrafacial__c</referenceTo>
    <relationshipLabel>Hydrafacial(S)</relationshipLabel>
    <relationshipName>Hydrafacial_S</relationshipName>
    <type>Lookup</type>
</CustomField>