force-app/main/default/objects/Hydrafacial_S__c/fields/Hydrafacial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hydrafacial_Notes__c</fullName>
    <label>Hydrafacial Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>